<resources>
    <string name="app_name">I`schedule</string>
    <string name="action_settings">Settings</string>
    <string name="txt1">Nuevo Evento</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="dia">Dia</string>
    <string name="hora">Hora</string>
    <string name="web">Web (opcional)</string>
    <string name="txt2">Tema</string>
    <string name="favoritos">Favoritos</string>
    <string name="limpiar_lista_de_eventos">Limpiar lista de Eventos</string>
    <string name="activar_notificaciones">Activar Notificaciones</string>


    <string name="tituloNotificacion">Se ha creado un nuevo Evento!</string>
    <string name="notification_channel_description">Notification from Mascot</string>
    <string name="info_datos">Info Datos</string>
    <string name="eventos_del_dia">Eventos del Dia</string>


</resources>
