<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Evento">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars[2]" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tV_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/allan"
                    android:text="@string/titulo"
                    android:textColor="#3F51B5"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iV_star"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    app:srcCompat="@android:drawable/btn_star_big_on" />
            </LinearLayout>

            <TextView
                android:id="@+id/tV_Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/allan"
                android:gravity="center"
                android:text="@string/descripcion"
                android:textColor="#3F51B5"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tV_Fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:fontFamily="@font/allan"
                    android:gravity="center"
                    android:text="Fecha"
                    android:textColor="#3F51B5"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tV_Hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:fontFamily="@font/allan"
                    android:gravity="center"
                    android:text="@string/hora"
                    android:textColor="#3F51B5"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tV_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:autoLink="web"
                android:fontFamily="@font/allan"
                android:gravity="center"
                android:text="@string/web"
                android:textColorLink="#673AB7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnVolver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/allan"
                    android:text="Volver"
                    android:textColor="#3F51B5"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="0dp"
                    android:fontFamily="@font/allan"
                    android:text="Editar Evento"
                    android:textColor="#3F51B5"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/allan"
                    android:onClick="eliminar"
                    android:text="Eliminar"
                    android:textAlignment="center"
                    android:textColor="#9C27B0"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>